syntax = "proto3";
package CIS.InternalServices.NotificationService.v2;
option csharp_namespace = "CIS.InternalServices.NotificationService.Contracts.v2";

import "google/protobuf/timestamp.proto";
import "Messages/Types.proto";

message GetStatisticsRequest {
    repeated NotificationStates States = 1;
    repeated NotificationChannels Channels = 2;
    google.protobuf.Timestamp TimeFrom = 3;
    google.protobuf.Timestamp TimeTo= 4;
}

message GetStatisticsResponse {
    StatisticsData Statistics = 1;
}
